* #364, #303 TestNG: SimpleReport is now thread-safe
* #364, #303 TestNG: SoftAsserts is now thread-safe
* #360 added methods to Selectors; byCssSelector(), byClassName()
* #355 added method $.dragAndDropTo(WebElement)
* #339 fixed JS error in Edge browser
* #290 fixed location of element screenshot - it's not put to "build/reports" folder, not to project root

=== 3.7 (07.07.2016)
* Upgrade to Selenium 2.53.1 - now it should work with Firefox 47
* #349 Added Marionette browser support - thanks to Geroen Dierckx @ridiekel for PR!
* #345 Selenide should not fail if browser doesn't support JavaScript
* #357 Don't show "Screenshots: " in the error log when screenshots are disabled - thanks to @BorisOsipov for PR!

=== 3.6 (29.05.2016)
* upgrade to phantomjsdriver 1.3.0 (compatible with selenium-java 2.53.0)
* Add method `$.screenshotAsImage()`: `BufferedImage elementScreenshot = $(".logo").screenshotAsImage();` - thanks to @Akkuzin!
* #321 set default page load strategy back to "normal"
* fixed TestNG TextReport Listener, now only classes annotated with @Report will get reported - thanks to Alexei Vinogradov!
* #335 Add support for non-public page objects
* #329 Add support for JBrowser driver (but most of Selenide tests still fail with it :( )  - thanks to Anil Kumar Reddy Gaddam for pull request!
* #341 Use Selenide timeout when downloading files
* #320 Implementation of basic auth. for many browsers - thanks to @dimand58

=== 3.5.1 (Released 04.04.2016)
* #309 method $$.shouldHave(size()) should not fail when timeout happens after the 1st check

=== 3.5 (Released 31.03.2016)
* #274 added advanced checks for collection size: <, <=, >, >=, <>
* #308 set page load strategy to "none" by default
* #306 method $.toString() always includes latest value of "value" attribute
* Upgraded to selenium-java 2.53.0, changelog: https://github.com/SeleniumHQ/selenium/blob/master/java/CHANGELOG

=== 3.4 (Released 03.03.2016)