@@ -26,6 +26,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * In some situations just clicking is not enough: $.click() doesn't take effect for &lt;a href&gt;.
    * In these cases use #followLink that actually navigates browser to @href value.
    * </p>
+   * 
+   * @see com.codeborne.selenide.commands.FollowLink
    */
   void followLink();
 
@@ -39,11 +41,14 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * </p>
    *
    * @param text Any text to enter into the text field.
+   *
+   * @see com.codeborne.selenide.commands.SetValue
    */
   SelenideElement setValue(String text);
 
   /**
    * Same as #setValue(java.lang.String)
+   * @see com.codeborne.selenide.commands.Val
    */
   SelenideElement val(String text);
 
@@ -58,6 +63,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * </p>
    *
    * @param text Any text to append into the text field.
+   * 
+   * @see com.codeborne.selenide.commands.Append
    */
   SelenideElement append(String text);
 
@@ -68,6 +75,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Implementation details:
    * This is the same as <pre>
    *  WebElement.sendKeys(Keys.ENTER)</pre>
+   *  
+   * @see com.codeborne.selenide.commands.PressEnter
    */
   SelenideElement pressEnter();
 
@@ -78,6 +87,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Implementation details:
    * This is the same as <pre>
    *  WebElement.sendKeys(Keys.TAB)</pre>
+   *  
+   * @see com.codeborne.selenide.commands.PressTab
    */
   SelenideElement pressTab();
 
@@ -88,6 +99,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Implementation details:
    * This is the same as <pre>
    *  WebElement.sendKeys(Keys.ESCAPE)</pre>
+   * 
+   * @see com.codeborne.selenide.commands.PressEscape
    */
   SelenideElement pressEscape();
 
@@ -96,12 +109,14 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * NB! For "select", returns text(s) of selected option(s).
    *
    * @return The innerText of this element
+   * @see com.codeborne.selenide.commands.GetText
    */
   @Override String getText();
 
   /**
    * Short form of getText()
    * @see WebElement#getText()
+   * @see com.codeborne.selenide.commands.GetText
    */
   String text();
 
@@ -109,6 +124,7 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Get the text code of the element with children.
    *
    * Short form of getAttribute("textContent") or getAttribute("innerText") depending on browser.
+   * @see com.codeborne.selenide.commands.GetInnerText
    */
   String innerText();
 
@@ -116,18 +132,21 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Get the HTML code of the element with children.
    *
    * Short form of getAttribute("innerHTML")
+   * @see com.codeborne.selenide.commands.GetInnerHtml
    */
   String innerHtml();
 
   /**
    * Get the attribute of the element. Synonym for getAttribute(String).
    * @return null if attribute is missing
+   * @see com.codeborne.selenide.commands.GetAttribute
    */
   String attr(String attributeName);
 
   /**
    * Get the "name" attribute of the element
    * @return attribute "name" value or null if attribute is missing
+   * @see com.codeborne.selenide.commands.GetName
    */
   String name();
 
@@ -136,6 +155,7 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Same as #getValue()
    * @return attribute "value" value or null if attribute is missing
    *
+   * @see com.codeborne.selenide.commands.Val
    */
   String val();
 
@@ -143,6 +163,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Get the "value" attribute of the element
    * @return attribute "value" value or null if attribute is missing
    * @since 3.1
+   * 
+   * @see com.codeborne.selenide.commands.GetValue
    */
   String getValue();
 
@@ -150,40 +172,54 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Select radio button
    * @param value value of radio button to select
    * @return selected "input type=radio" element
+   * 
+   * @see com.codeborne.selenide.commands.SelectRadio
    */
   SelenideElement selectRadio(String value);
 
   /**
    * Get value of attribute "data-<i>dataAttributeName</i>"
+   * 
+   * @see com.codeborne.selenide.commands.GetDataAttribute
    */
   String data(String dataAttributeName);
 
   /**
    * Checks if element exists true on the current page.
    * @return false if element is not found, browser is closed or any WebDriver exception happened
+   * 
+   * @see com.codeborne.selenide.commands.Exists
    */
   boolean exists();
 
   /**
    * Check if this element exists and visible.
    * @return false if element does not exists, is invisible, browser is closed or any WebDriver exception happened.
+   * 
+   * @see com.codeborne.selenide.commands.IsDisplayed
    */
   @Override
   boolean isDisplayed();
 
   /**
    * Return true iff element matches given condition
+   * 
+   * @see com.codeborne.selenide.commands.Matches
    */
   boolean is(Condition condition);
 
   /**
    * Return true iff element matches given condition
+   * 
+   * @see com.codeborne.selenide.commands.Matches
    */
   boolean has(Condition condition);
 
   /**
    * Set checkbox state to CHECKED or UNCHECKED.
    * @param selected true for checked and false for unchecked
+   *                 
+   * @see com.codeborne.selenide.commands.SetSelected
    */
   SelenideElement setSelected(boolean selected);
 
@@ -205,6 +241,7 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * {@code $("#errorMessage").should(appear).shouldBe(enabled);}
    *
    * @see Configuration#timeout
+   * @see com.codeborne.selenide.commands.Should
    */
   SelenideElement should(Condition... condition);
 
@@ -215,6 +252,7 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * }</p>
 
    * @see SelenideElement#should(com.codeborne.selenide.Condition...)
+   * @see com.codeborne.selenide.commands.ShouldHave
    */
   SelenideElement shouldHave(Condition... condition);
 
@@ -225,6 +263,7 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * }</p>
    *
    * @see SelenideElement#should(com.codeborne.selenide.Condition...)
+   * @see com.codeborne.selenide.commands.ShouldBe
    */
   SelenideElement shouldBe(Condition... condition);
 
@@ -243,6 +282,7 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * }</p>
    *
    * @see Configuration#timeout
+   * @see com.codeborne.selenide.commands.ShouldNot
    */
   SelenideElement shouldNot(Condition... condition);
 
@@ -253,6 +293,7 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * }</p>
    *
    * @see SelenideElement#shouldNot(com.codeborne.selenide.Condition...)
+   * @see com.codeborne.selenide.commands.ShouldNotHave
    */
   SelenideElement shouldNotHave(Condition... condition);
 
@@ -263,6 +304,7 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * }</p>
    *
    * @see SelenideElement#shouldNot(com.codeborne.selenide.Condition...)
+   * @see com.codeborne.selenide.commands.ShouldNotBe
    */
   SelenideElement shouldNotBe(Condition... condition);
 
@@ -274,6 +316,7 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    *
    * @param condition e.g. enabled, visible, text() and so on
    * @param timeoutMilliseconds timeout in milliseconds.
+   * @see com.codeborne.selenide.commands.ShouldBe
    */
   SelenideElement waitUntil(Condition condition, long timeoutMilliseconds);
 
@@ -286,6 +329,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * @param condition e.g. enabled, visible, text() and so on
    * @param timeoutMilliseconds timeout in milliseconds.
    * @param pollingIntervalMilliseconds  interval in milliseconds, when checking condition
+   *
+   * @see com.codeborne.selenide.commands.ShouldBe
    */
   SelenideElement waitUntil(Condition condition, long timeoutMilliseconds, long pollingIntervalMilliseconds);
 
@@ -297,6 +342,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    *
    * @param condition e.g. enabled, visible, text() and so on
    * @param timeoutMilliseconds timeout in milliseconds.
+   *                            
+   * @see com.codeborne.selenide.commands.ShouldNotBe
    */
   SelenideElement waitWhile(Condition condition, long timeoutMilliseconds);
 
@@ -309,6 +356,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * @param condition e.g. enabled, visible, text() and so on
    * @param timeoutMilliseconds timeout in milliseconds.
    * @param pollingIntervalMilliseconds  interval in milliseconds, when checking condition
+   *
+   * @see com.codeborne.selenide.commands.ShouldNotBe
    */
   SelenideElement waitWhile(Condition condition, long timeoutMilliseconds, long pollingIntervalMilliseconds);
 
@@ -318,6 +367,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Not recommended to use for test verifications.
    *
    * @return e.g. <strong id=orderConfirmedStatus class=>Order has been confirmed</strong>
+   * 
+   * @see com.codeborne.selenide.commands.ToString
    */
   @Override String toString();
 
@@ -325,6 +376,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Get parent element of this element
    * For example, $("td").parent() could give some "tr".
    * @return Parent element
+   * 
+   * @see com.codeborne.selenide.commands.GetParent
    */
   SelenideElement parent();
 
@@ -334,47 +387,59 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    *
    * @param tagOrClass Either HTML tag or CSS class. E.g. "form" or ".active".
    * @return Matching ancestor element
+   * 
+   * @see com.codeborne.selenide.commands.GetClosest
    */
   SelenideElement closest(String tagOrClass);
 
   /**
    * <p>Find the first matching element inside given element</p>
    * <p>Short form of {@code webElement.findElement(By.cssSelector(cssSelector))}</p>
+   * 
+   * @see com.codeborne.selenide.commands.Find
    */
   SelenideElement find(String cssSelector);
 
   /**
    * <p>Find the Nth matching element inside given element</p>
+   * 
+   * @see com.codeborne.selenide.commands.Find
    */
   SelenideElement find(String cssSelector, int index);
 
   /**
-   * com.codeborne.selenide.SelenideElement#find(java.lang.String)
+   * Same as {@link #find(String)}
+   * @see com.codeborne.selenide.commands.Find
    */
   SelenideElement find(By selector);
 
   /**
-   * com.codeborne.selenide.SelenideElement#find(java.lang.String)
+   * Same as {@link #find(String, int)}
+   * @see com.codeborne.selenide.commands.Find
    */
   SelenideElement find(By selector, int index);
 
   /**
-   * @see SelenideElement#find(java.lang.String)
+   * Same as {@link #find(String)}
+   * @see com.codeborne.selenide.commands.Find
    */
   SelenideElement $(String cssSelector);
 
   /**
-   * com.codeborne.selenide.SelenideElement#find(java.lang.String)
+   * Same as {@link #find(String, int)}
+   * @see com.codeborne.selenide.commands.Find
    */
   SelenideElement $(String cssSelector, int index);
 
   /**
-   * com.codeborne.selenide.SelenideElement#find(java.lang.String)
+   * Same as {@link #find(String)}
+   * @see com.codeborne.selenide.commands.Find
    */
   SelenideElement $(By selector);
 
   /**
-   * com.codeborne.selenide.SelenideElement#find(java.lang.String)
+   * Same as {@link #find(String, int)}
+   * @see com.codeborne.selenide.commands.Find
    */
   SelenideElement $(By selector, int index);
 
@@ -388,6 +453,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * </p>
    *
    * @return list of elements inside given element matching given CSS selector
+   * 
+   * @see com.codeborne.selenide.commands.FindAll
    */
   ElementsCollection findAll(String cssSelector);
 
@@ -399,18 +466,20 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * <p>
    * For example, {@code $("#multirowTable").findAll(By.className("active")).shouldHave(size(2));}
    * </p>
-
+   *
    * @return list of elements inside given element matching given criteria
+   * 
+   * @see com.codeborne.selenide.commands.FindAll
    */
   ElementsCollection findAll(By selector);
 
   /**
-   * com.codeborne.selenide.SelenideElement#findAll(java.lang.String)
+   * Same as {@link #findAll(String)}
    */
   ElementsCollection $$(String cssSelector);
 
   /**
-   * com.codeborne.selenide.SelenideElement#findAll(java.lang.String)
+   * Same as {@link #findAll(By)}
    */
   ElementsCollection $$(By selector);
 
@@ -421,6 +490,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * @param fileName name of the file or the relative path in classpath e.g. "files/1.pfd"
    * @return the object of the first file uploaded
    * @throws IllegalArgumentException if any of the files is not found
+   * 
+   * @see com.codeborne.selenide.commands.UploadFileFromClasspath
    */
   File uploadFromClasspath(String... fileName);
 
@@ -431,24 +502,32 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * @param file file object(s)
    * @return the object of the first file uploaded
    * @throws IllegalArgumentException if any of the files is not found, or other errors
+   * 
+   * @see com.codeborne.selenide.commands.UploadFile
    */
   File uploadFile(File... file);
 
   /**
    * Select an option from dropdown list (by index)
    * @param index 0..N (0 means first option)
+   *              
+   * @see com.codeborne.selenide.commands.SelectOptionByTextOrIndex
    */
   void selectOption(int index);
 
   /**
    * Select an option from dropdown list (by text)
    * @param text visible text of option
+   *             
+   * @see com.codeborne.selenide.commands.SelectOptionByTextOrIndex
    */
   void selectOption(String text);
 
   /**
    * Select an option from dropdown list (by value)
    * @param value "value" attribute of option
+   *              
+   * @see com.codeborne.selenide.commands.SelectOptionByValue
    */
   void selectOptionByValue(String value);
 
@@ -456,21 +535,29 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Find selected option from this select field
    * @return WebElement for selected &lt;option&gt; element
    * @throws NoSuchElementException if no options are selected
+   * 
+   * @see com.codeborne.selenide.commands.GetSelectedOption
    */
   SelenideElement getSelectedOption() throws NoSuchElementException;
 
   /**
    * Get value of selected option in select field
+   * 
+   * @see com.codeborne.selenide.commands.GetSelectedValue
    */
   String getSelectedValue();
 
   /**
    * Get text of selected option in select field
+   * 
+   * @see com.codeborne.selenide.commands.GetSelectedText
    */
   String getSelectedText();
 
   /**
    * Ask browser to scroll to this element
+   * 
+   * @see com.codeborne.selenide.commands.ScrollTo
    */
   SelenideElement scrollTo();
 
@@ -478,14 +565,22 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * Download file linked by "href" attribute of this element
    * @throws RuntimeException if 50x status code was returned from server
    * @throws FileNotFoundException if 40x status code was returned from server
+   * 
+   * @see com.codeborne.selenide.commands.DownloadFile
    */
   File download() throws FileNotFoundException;
 
   /**
    * @return the original Selenium WebElement wrapped by this object
+   * 
+   * @see com.codeborne.selenide.commands.ToWebElement
    */
   WebElement toWebElement();
 
+  /**
+   * @return Underlying {@link WebElement}
+   * @see com.codeborne.selenide.commands.GetWrappedElement
+   */
   @Override
   WebElement getWrappedElement();
 
@@ -499,24 +594,32 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * But it uses JavaScript method to click if {@code com.codeborne.selenide.Configuration#clickViaJs} is defined.
    * It may be helpful for testing in Internet Explorer where native click doesn't always work correctly.
    * </p>
+   * 
+   * @see com.codeborne.selenide.commands.Click
    */
   @Override void click();
 
   /**
    * Click with right mouse button on this element
    * @return this element
+   * 
+   * @see com.codeborne.selenide.commands.ContextClick
    */
   SelenideElement contextClick();
 
   /**
    * Double click the element
    * @return this element
+   * 
+   * @see com.codeborne.selenide.commands.DoubleClick
    */
   SelenideElement doubleClick();
 
   /**
    * Emulate "mouseOver" event. In other words, move mouse cursor over this element (without clicking it).
    * @return this element
+   * 
+   * @see com.codeborne.selenide.commands.Hover
    */
   SelenideElement hover();
 
@@ -527,6 +630,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * 
    * @param targetCssSelector CSS selector defining target element
    * @return this element
+   * 
+   * @see com.codeborne.selenide.commands.DragAndDropTo
    */
   SelenideElement dragAndDropTo(String targetCssSelector);
 
@@ -537,6 +642,8 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    * 
    * @param target target element
    * @return this element
+   * 
+   * @see com.codeborne.selenide.commands.DragAndDropTo
    */
   SelenideElement dragAndDropTo(WebElement target);
 
@@ -545,18 +652,24 @@ public interface SelenideElement extends WebElement, FindsByLinkText, FindsById,
    *
    * @throws IllegalArgumentException if argument is not an "img" element
    * @since 2.13
+   * 
+   * @see com.codeborne.selenide.commands.IsImage
    */
   boolean isImage();
 
   /**
    * Take screenshot of this element
    * @return file with screenshot (*.png)
+   * 
+   * @see com.codeborne.selenide.commands.TakeScreenshot
    */
   File screenshot();
 
   /**
    * Take screenshot of this element
    * @return buffered image with screenshot
+   * 
+   * @see com.codeborne.selenide.commands.TakeScreenshotAsImage
    */
   BufferedImage screenshotAsImage();
 }
