@@ -9,6 +9,8 @@
 * #355 added method $.dragAndDropTo(WebElement)
 * #339 fixed JS error in Edge browser
 * #290 fixed location of element screenshot - it's not put to "build/reports" folder, not to project root
+* #302 Selenide now throws an error if soft assert is used without annotation
+* #367 added link to implementation to javadoc of all public methods in SelenideElement
 
 === 3.7 (07.07.2016)
 * Upgrade to Selenium 2.53.1 - now it should work with Firefox 47
